# TaskCpp

./: CMakeLists.txt  Window.cpp  alltasks.cpp  alltasks.h  main.cpp  myday.cpp  myday.h  newtask.cpp  taskday.cpp
assets/: Angel.txt  Luis.txt  users.txt
headers/: Window.h  alltasks.h  calendarPanel.h  login.h  myday.h  newtask.h  task.h  taskday.h
sources/: Window.cpp  alltasks.cpp  calendarPanel.cpp  login.cpp  myday.cpp  newtask.cpp  task.cpp  taskday.cpp
